BJS2-40907 added getSubscribers for Album Visibility feature in PostService